[metadata]
name = dgws-api
version = 0.3.0a0
author = Barothi Adam
author_email = barothi.adam@gmail.com
description = A convenience Python wrapper for the DiscoveryGate Web Service (DGWS).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adam-of-barot/dgws-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = zeep>=4.0.0

[options.packages.find]
where = src